--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -15,3 +15,5 @@ body
             h1 get Metadata of your file!
           .mdl-cell.mdl-cell--12-col
             form(enctype="multipart/form-data" method="post" name="fileform")
+              input(type="file" name="file" required)
+              input(type="submit" value="Submit for metadata!")
