--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -2,7 +2,7 @@ html
 head
   title= title
   meta(name="viewport" content="width=device-width, initial-scale=1.0")
-  link(href="../stylesheets/main.css" rel="stylesheet")
+  link(href="../css/style.css" rel="stylesheet")
   link(rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons")
   link(rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-amber.min.css")
   script(defer src="https://code.getmdl.io/1.2.1/material.min.js")
@@ -11,9 +11,9 @@ body
     .mdl-layout.mdl-js-layout
       main.mdl-layout__content
         .mdl-grid
-          .mdl-cell.mdl-cell--12-col
+          .mdl-cell.mdl-cell--12-col.w-centered
             h1 get Metadata of your file!
-          .mdl-cell.mdl-cell--12-col
+          .mdl-cell.mdl-cell--12-col.w-centered
             form(enctype="multipart/form-data" method="post" name="fileform")
               input(type="file" name="file" required)
               input(type="submit" value="Submit for metadata!")
